# aps105-examples

./: .gitignore  Makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
01-why-c-programming/: meson.build
02-variables/: meson.build  undefined-x.c
03-input-output/: inches-to-cm.c  io-x.c  meson.build  print-a.c
04-arithmetic/: conversion.c  divide-by-0.c  division.c  meson.build  mod.c  result.c
05-math/: example.c  log.c  meson.build  srand.c
05-math-and-random-numbers/: log.c  nickels.c  rand.c  rounding.c  sin.c  sqrt-custom-header.c  sqrt-no-header.c  sqrt.c
06-if-statements/: example.c  game.c  is-even.c  meson.build  odd-or-even.c  two-if-and-else.c
07-decision-making/: is-letter-split.c  is-letter.c  max-of-3.c  meson.build
08-while-loops/: countdown.c  meson.build  num-digits.c  positive-input.c  sum.c
09-for-loops/: count.c  meson.build  print-star-triangle.c  print-stars.c
10-functions/: example.c  meson.build  print-mirror-star-triangle.c  print-star-triangle.c
11-scope/: example.c  factorial.c  is-digit.c  meson.build  scanf-weirdness.c  swap-global.c  swap-real.c  swap.c
12-pointers/: meson.build  print.c
13-arrays/: array.c  define.c  length.c  loop.c  meson.build  out-of-bounds.c  size-in-bytes.c  start.c  values.c
14-pointer-arithmetic/: arithmetic.c  deref-null.c  example.c  invalid-pointer.c  max-pointer.c  meson.build  sum.c
15-goldbachs-conjecture-in-c/: goldbachs-conjecture.c  meson.build
16-midterm-review-session/: barcodeDigit.c  dotProduct.c  meson.build  pattern.c
17-midterm-review-session/: estimateE.c  largestSum.c  meson.build
18-midterm-review-session/: meson.build  numberOfBits.c  orderArrayByDigit2.c  pythagoreanTriples.c  sieve.c
19-midterm-review-session/: 2022-q5.c  hasSameNumbers.c  isPalindrome.c  meson.build
20-dynamic-memory/: double-free.c  dynamic-array.c  invalid-pointer.c  meson.build  use-after-free.c  valid-pointer.c
21-2d-arrays/: auto-2d-array.c  different-column-sizes.c  dynamic-2d-array.c  dynamic-stack-array.c  first-2d-array.c  meson.build  tic-tac-toe.c
22-strings/: array-length.c  can-modify.c  cannot-modify.c  count-spaces.c  fgets.c  getline.c  magic.c  meson.build  print.c  scanf.c  string-length.c  too-short.c
23-string-functions/: atof.c  atoi.c  compare.c  meson.build  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strstr.c
24-string-exercises/: dectohex.c  long.c  meson.build  short.c
25-recursion/: exponent.c  factorial.c  fib-optimization.c  fib.c  meson.build
26-more-recursion/: count.c  gcd.c  hanoi.c  meson.build  sum-helper.c  sum.c
27-string-recursion-exercises/: direction-switch.c  direction.c  is-palindrome.c  meson.build  month.c  recursive-strchr.c  typedef-direction.c  typedef-number.c
28-structures/: distance.c  example  main.c  meson.build  point-distance.c  point.c  point.h  pointers.c
29-what-is-a-linked-list/: linked-list-start.c  list-insert.c  list-swapped-lines.c  list-two-nodes.c  meson.build  move-array.c  move-node.c  node-insert.c  node.c
30-linked-list-implementation/: list-four-nodes.c  list-free.c  list-insert-after.c  list-insert-before.c  list-length.c  list-remove-alt.c  list-remove.c  list.c  meson.build
31-linked-list-exercises/: calloc-example.c  final-question.c  linked_list.c  linked_list.h  meson.build  realloc-example.c  remove.c  resize-array.c  sum.c  vector.c
32-sorting/: bubble-sort.c  insertion-sort.c  meson.build  selection-sort.c
33-more-sorting/: bogo-sort.c  bozo-sort.c  merge-sort.c  meson.build  qsort.c  quick-sort.c  sort-args.c
34-searching/: binary-search-count.c  binary-search-first.c  binary-search-last.c  binary-search.c  linear-search.c  meson.build  recursive-binary-search.c
35-files/: grade-calc.c  grades.txt  meson.build
examples/: compile.py
