project(
  '04-arithmetic',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('conversion',
           'conversion.c')

executable('divide-by-0',
           'divide-by-0.c')

executable('division',
           'division.c')

executable('mod',
           'mod.c')

executable('result',
           'result.c')
