project(
  '11-scope',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('example', 'example.c')
executable('factorial', 'factorial.c')
executable('is-digit', 'is-digit.c')
executable('scanf-weirdness', 'scanf-weirdness.c')
executable('swap', 'swap.c')
executable('swap-global', 'swap-global.c')
executable('swap-real', 'swap-real.c')
