project(
  '13-arrays',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('array', 'array.c')
executable('define', 'define.c')
executable('example', 'example.c')
executable('length', 'length.c')
executable('loop', 'loop.c')
executable('out-of-bounds', 'out-of-bounds.c')
executable('size-in-bytes', 'size-in-bytes.c')
executable('start', 'start.c')
executable('values', 'values.c')
