project(
  '14-pointer-arithmetic',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('arithmetic', 'arithmetic.c')
executable('array-argument', 'array-argument.c')
executable('deref-null', 'deref-null.c')
executable('example', 'example.c')
executable('invalid-pointer', 'invalid-pointer.c')
executable('max-pointer', 'max-pointer.c')
executable('sum', 'sum.c')
