project(
  '19-midterm-review-session',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('2022-q5', '2022-q5.c')
executable('example', 'example.c')
executable('hasSameNumbers', 'hasSameNumbers.c')
executable('isPalindrome', 'isPalindrome.c')
executable('sieve', 'sieve.c')
