project(
  '20-dynamic-memory',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('double-free', 'double-free.c')
executable('dynamic-array', 'dynamic-array.c')
executable('example', 'example.c')
executable('invalid-pointer', 'invalid-pointer.c')
executable('use-after-free', 'use-after-free.c')
executable('valid-pointer', 'valid-pointer.c')
