project(
  '21-2d-arrays',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('dynamic-2d-array', 'dynamic-2d-array.c')
executable('auto-2d-array', 'auto-2d-array.c')
executable('different-column-sizes', 'different-column-sizes.c')
executable('dynamic-stack-array', 'dynamic-stack-array.c')
executable('example', 'example.c')
executable('first-2d-array', 'first-2d-array.c')
executable('tic-tac-toe', 'tic-tac-toe.c')
