project(
  '23-string-functions',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('example', 'example.c')
executable('strcat', 'strcat.c')
executable('strcmp', 'strcmp.c')
executable('strcpy', 'strcpy.c')
executable('strlen', 'strlen.c')
executable('strncat', 'strncat.c')
executable('strncmp', 'strncmp.c')
executable('strncpy', 'strncpy.c')
executable('strnlen', 'strnlen.c')
