project(
  '27-string-recursion-exercises',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('direction', 'direction.c')
executable('direction-switch', 'direction-switch.c')
executable('example', 'example.c')
executable('is-palindrome', 'is-palindrome.c')
executable('month', 'month.c')
executable('recursive-strchr', 'recursive-strchr.c')
executable('typedef-direction', 'typedef-direction.c')
executable('typedef-number', 'typedef-number.c')
