project(
  '29-what-is-a-linked-list',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('example', 'example.c')
executable('list-insert', 'list-insert.c')
executable('list-two-nodes', 'list-two-nodes.c')
executable('list-swapped-lines', 'list-swapped-lines.c')
executable('move-array', 'move-array.c')
executable('node', 'node.c')
executable('node-insert', 'node-insert.c')
