project(
  '29-what-is-a-linked-list',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('example', 'example.c')
executable('list', 'list.c')
executable('list-four-nodes', 'list-four-nodes.c')
executable('list-free', 'list-free.c')
executable('list-insert-after', 'list-insert-after.c')
executable('list-insert-before', 'list-insert-before.c')
executable('list-length', 'list-length.c')
executable('list-remove', 'list-remove.c')
executable('list-remove-alt', 'list-remove-alt.c')
