project(
  '31-linked-list-exercises',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('calloc-example', 'calloc-example.c')
executable('example', 'example.c')
executable('realloc-example', 'realloc-example.c')
executable('remove', 'remove.c', 'linked_list.c')
executable('resize-array', 'resize-array.c')
executable('sum', 'sum.c', 'linked_list.c')
