project(
  '34-searching',
  'c',
  default_options : ['c_std=gnu2x', 'warning_level=3']
)

executable('binary-search', 'binary-search.c')
executable('binary-search-first', 'binary-search-first.c')
executable('binary-search-last', 'binary-search-last.c')
executable('example', 'example.c')
executable('linear-search', 'linear-search.c')
executable('recursive-binary-search', 'recursive-binary-search.c')
